--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ theme:
   youtube:
 
   # Scripts
-  google_analytics: # Tracking ID, e.g. "UA-000000-01"
+  google_analytics: UA-73095900-1 # Tracking ID, e.g. "UA-000000-01"
   disqus_shortname: Towdium
   katex: true # Enable if using math markup
 
