--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # SITE CONFIGURATION
 baseurl: "" # Set it to "" if use for personal site. The subpath of your site, e.g. /blog/
 url: "https://towdium.github.io" # the base hostname & protocol for your site
-imageurl: "https://unsplash.it/2600/500?random" #"https://unsplash.it/2600/500?random""https://source.unsplash.com/category/nature/2600x500"
+imageurl: "https://source.unsplash.com/category/nature/2600x500" #"https://unsplash.it/2600/500?random""https://source.unsplash.com/category/nature/2600x500"
 
 # THEME-SPECIFIC CONFIGURATION
 theme:
