--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: Towdium
+disqus_username: towdium
 
 # Duoshuo settings
 #duoshuo_username: huxblog
