--- a/_config.yml
+++ b/_config.yml
@@ -48,10 +48,10 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: towdium
+#disqus_username: towdium
 
 # Duoshuo settings
-#duoshuo_username: huxblog
+duoshuo_username: towdium
 # Share component is depend on Comment so we can NOT use share only.
 #duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
