Update post and friend link

--- a/_config.yml
+++ b/_config.yml
@@ -87,5 +87,8 @@ friends: [
     },{
         title: "酒石酸菌",
         href: "https://tartaricacid.github.io/"
+    },{
+        title: "Jerry's Blog",
+        href: "https://jerryding.site/"
     }
 ]
