--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 _site
+_posts/_draft
+_posts/_archive
+_archive
 node_modules
-raft
-npm-debug.log
+.vscode
+.jekyll-cache
+*.log
+*.sh
 .DS_Store
 */.DS_Store
 */*/.DS_Store
-*.sh
