--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,24 @@
 # Site settings
 title: Towdium's here
 SEOTitle: Towdium's here | A personal blog
-header-img: http://api.towdium.me/unsplash/collection/645108/2600x500
+header-img: https://source.unsplash.com/collection/645108/2600x500
 email: towdium@gmail.com
 description: "这里是 Towdium 的个人博客，分享我的一些学习记录，以及日常的碎碎念"
 keyword: "Towdium"
 url: "http://towdium.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
-
+# Publish posts or collection documents with a future date.
+future: false
 
 # SNS settings
 RSS: true
 weibo_username:     5092127194
-#zhihu_username:
+#zhihu_username:     huxpro
 github_username:    towdium
-#twitter_username:  huxpro
+#twitter_username:   huxpro
 #facebook_username:  huxpro
-# linkedin_username:  firstname-lastname-idxxxx
+#linkedin_username:  firstname-lastname-idxxxx
 
 
 
@@ -28,12 +29,16 @@ permalink: pretty
 paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+# If you have timezone issue (e.g. #68) in China, uncomment to use this:
+#timezone: CN  
 
 
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
-gems: [jekyll-paginate]
+# make sure you have this gem installed
+# `$ gem install jekyll-paginate`
+plugins: [jekyll-paginate]
 
 
 
@@ -44,22 +49,27 @@ gems: [jekyll-paginate]
 markdown: kramdown
 kramdown:
   input: GFM                            # use Github Flavored Markdown !important
+  syntax_highlighter_opts:
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+      start_line: 1
+
 
 
 # Disqus settings
 disqus_username: towdium
 
-# Duoshuo settings
-# duoshuo_username: towdium
-# Share component is depend on Comment so we can NOT use share only.
-#duoshuo_share: true                     # set to false if you want to use Comment without Sharing
-
+# Netease settings
+netease_comment: false
 
 
 
 # Analytics settings
-# Baidu Analytics
-#ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
+# Baidu Analytics 
+# ba_track_id: [your track id]
+
 # Google Analytics
 ga_track_id: 'UA-73095900-1'            # Format: UA-xxxxxx-xx
 ga_domain: www.towdium.me
@@ -77,6 +87,11 @@ sidebar-avatar: /img/site/avatar.jpg      # use absolute URL, seeing it's used i
 featured-tags: true                     # whether or not using Feature-Tags
 featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
 
+
+
+# Progressive Web Apps
+chrome-tab-theme-color: "#000000"
+service-worker: true
 
 
 # Friends
