--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Towdium's here
 SEOTitle: Towdium's here | A personal blog
-header-img: https://source.unsplash.com/collection/645108/2600x500
+header-img: https://api.towdium.me/unsplash/source/collection/645108/2600x500
 email: towdium@gmail.com
 description: "这里是 Towdium 的个人博客，分享我的一些学习记录，以及日常的碎碎念"
 keyword: "Towdium"
